Fix for missing filter button on iphone

--- a/front-gateway/src/components/Search/style/search.scss
+++ b/front-gateway/src/components/Search/style/search.scss
@@ -30,6 +30,11 @@
   background-color: $gray-lighter;
   padding-top: 39px;
 
+  @media (max-width: $screen-xs-max) {
+    overflow-y: scroll; /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch;
+  }
+
   @media (min-width: $screen-md-min) {
     bottom: 0;
     left: 0;
